<resources>
    <string name="app_name">Service panel</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty</string>
    <string name="add_word">Add word</string>
    <string name="select">Select Item</string>
    <string name="status_zdarzenia">Status zdarzenia</string>
    <string name="save">Save</string>
    <string name="data_zako_czenia_zdarzenia">Data zakończenia zdarzenia</string>
    <string name="object">Obiekt</string>
    <string name="a">A</string>
    <string name="textview">TextView</string>
    <string name="text_field">Uzupełnij wszystkie dane</string>
    <string name="date_stop">Nie podano daty </string>
    <string name="name_event">Nazwa zdarzenia</string>
    <string name="object_address">Adres obiektu</string>
    <string name="status_event">Status zdarzenia</string>
    <string name="add_button">Dodaj</string>
    <string name="edit_button">Edytuj</string>
    <string name="end_button">Zakończ</string>
    <string name="login_button">Zaloguj</string>
    <string name="mail">e-mail</string>
    <string name="password">hasło</string>
    <string name="wait_event">OCZEKUJE NA REALIZACJE</string>
    <string name="end_event">ZAKOŃCZONO</string>
    <string name="continue_event">BĘDZIE KONTYNUOWANE</string>
    <string name="now_event">W TRAKCIE</string>
</resources>